--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/siyiing/Mavericks_CRUD-Rest-APIs#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "nodemon": "^2.0.22",
