--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
-  "development": {
-    "username": "postgres",
-    "password": "siying",
-    "database": "sequelize_employee_db",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1", 
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  }
+    "development": {
+        "username": "postgres",
+        "password": "siying",
+        "database": "sequelize_employee_db",
+        "host": "127.0.0.1",
+        "dialect": "postgres"
+    },
+    "test": {
+        "username": "root",
+        "password": null,
+        "database": "database_test",
+        "host": "127.0.0.1",
+        "dialect": "postgres"
+    },
+    "production": {
+        "username": "leejianhong",
+        "password": "root",
+        "database": "siying_db_production",
+        "host": "siying_emp_api_db",
+        "dialect": "postgres"
+    }
 }
