--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-  "name": "mavericks_crud-rest-apis",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.ts",
-    "build": "npx tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/siyiing/Mavericks_CRUD-Rest-APIs.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/siyiing/Mavericks_CRUD-Rest-APIs/issues"
-  },
-  "homepage": "https://github.com/siyiing/Mavericks_CRUD-Rest-APIs#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.1",
-    "nodemon": "^2.0.22",
-    "pg": "^8.11.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
-  }
+    "name": "mavericks_crud-rest-apis",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "PORT=5000 nodemon src/app.ts",
+        "start": "NODE_ENV=production npx sequelize db:migrate && npm run build && NODE_ENV=production node dist/app.js",
+        "build": "npx tsc"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/siyiing/Mavericks_CRUD-Rest-APIs.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/siyiing/Mavericks_CRUD-Rest-APIs/issues"
+    },
+    "homepage": "https://github.com/siyiing/Mavericks_CRUD-Rest-APIs#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "joi": "^17.9.2",
+        "jsonwebtoken": "^9.0.1",
+        "nodemon": "^2.0.22",
+        "pg": "^8.11.0",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.32.1",
+        "sequelize-cli": "^6.6.1"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/node": "^20.4.2",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.1.6"
+    }
 }
